--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "saadpasta.github.io",
+  "name": "faizanbardai.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
